Init Task-Manager project

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
+# Webpack-typescript
 webpack-typescript/node_modules
 webpack-typescript/dist
+
+# Task manager
+Task-Manager/node_modules
+Task-Manager/dist
